unpackaged/main/default/objects/ETST_Student__c/ETST_Student__c.object-meta.xml
<CustomObject>
    <label>Student</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>