unpackaged/main/default/objects/ETST_Student__c/fields/Account_Site__c.field-meta.xml
<CustomField>
    <fullName>Account_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Site</label>
    <referenceTo>ETSALES_Account_Sites__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>