unpackaged/main/default/objects/ETST_Student__c/fields/ETST_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>ETST_Coordinator__c</fullName>
    <formula>if(ETST_School__c !=null, ETST_School__r.ETST_Coordinator__c, ETST_School_Name__r.Customer__r.ETST_Coordinator__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coordinator</label>
    <type>Text</type>
</CustomField>