unpackaged/main/default/objects/ETST_Student__c/fields/ETST_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>ETST_Date_of_Birth__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>