unpackaged/main/default/objects/ETST_Student__c/fields/ETST_Division__c.field-meta.xml
<CustomField>
    <fullName>ETST_Division__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>