unpackaged/main/default/objects/ETST_Student__c/fields/ETST_Email__c.field-meta.xml
<CustomField>
    <fullName>ETST_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email</label>
    <type>Email</type>
</CustomField>