unpackaged/main/default/objects/ETST_Student__c/fields/ETST_Emirate__c.field-meta.xml
<CustomField>
    <fullName>ETST_Emirate__c</fullName>
    <label>Emirate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abu Dhabi</fullName>
            </value>
            <value>
                <fullName>Dubai</fullName>
            </value>
            <value>
                <fullName>Ajman</fullName>
            </value>
            <value>
                <fullName>Fujairah</fullName>
            </value>
            <value>
                <fullName>Ras al Khaimah</fullName>
            </value>
            <value>
                <fullName>Sharjah</fullName>
            </value>
            <value>
                <fullName>Umm al Quwain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>