unpackaged/main/default/objects/ETST_Student__c/fields/ETST_Emirates_Id__c.field-meta.xml
<CustomField>
    <fullName>ETST_Emirates_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Emirates Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>