unpackaged/main/default/objects/ETST_Student__c/fields/ETST_ESIS_No__c.field-meta.xml
<CustomField>
    <fullName>ETST_ESIS_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ESIS No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>