unpackaged/main/default/objects/ETST_Student__c/fields/ETST_ETransport__c.field-meta.xml
<CustomField>
    <fullName>ETST_ETransport__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ETransport</label>
    <length>255</length>
    <type>Text</type>
</CustomField>