unpackaged/main/default/objects/ETST_Student__c/fields/ETST_First_Name__c.field-meta.xml
<CustomField>
    <fullName>ETST_First_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>