unpackaged/main/default/objects/ETST_Student__c/fields/ETST_Location__c.field-meta.xml
<CustomField>
    <fullName>ETST_Location__c</fullName>
    <label>Location</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>