unpackaged/main/default/objects/ETST_Student__c/fields/ETST_Medical_Condition__c.field-meta.xml
<CustomField>
    <fullName>ETST_Medical_Condition__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Medical Condition / Allergy / Disability</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>