unpackaged/main/default/objects/ETST_Student__c/fields/ETST_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>ETST_Middle_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>