unpackaged/main/default/objects/ETST_Student__c/fields/ETST_Nationality__c.field-meta.xml
<CustomField>
    <fullName>ETST_Nationality__c</fullName>
    <label>Nationality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ETST_Nationality</valueSetName>
    </valueSet>
</CustomField>