unpackaged/main/default/objects/ETST_Student__c/fields/ETST_Nationality_AR__c.field-meta.xml
<CustomField>
    <fullName>ETST_Nationality_AR__c</fullName>
    <label>Nationality AR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ETST_Nationality_AR</valueSetName>
    </valueSet>
</CustomField>