unpackaged/main/default/objects/ETST_Student__c/fields/ETST_Parent_Access_Granted__c.field-meta.xml
<CustomField>
    <fullName>ETST_Parent_Access_Granted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parent Access Granted</label>
    <type>Checkbox</type>
</CustomField>