unpackaged/main/default/objects/ETST_Student__c/fields/ETST_Phone__c.field-meta.xml
<CustomField>
    <fullName>ETST_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>