unpackaged/main/default/objects/ETST_Student__c/fields/ETST_Primary_Assigned_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>ETST_Primary_Assigned_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Assigned Vehicle</label>
    <referenceTo>SALine_Assigned_Vehicle__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>