unpackaged/main/default/objects/ETST_Student__c/fields/ETST_Relationship__c.field-meta.xml
<CustomField>
    <fullName>ETST_Relationship__c</fullName>
    <label>Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
            <value>
                <fullName>Care Taker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>