unpackaged/main/default/objects/ETST_Student__c/fields/ETST_Relationship_AR__c.field-meta.xml
<CustomField>
    <fullName>ETST_Relationship_AR__c</fullName>
    <label>Relationship AR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ولي أمر</fullName>
            </value>
            <value>
                <fullName>الام \ الاب</fullName>
            </value>
            <value>
                <fullName>موكل من الاهل</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>