unpackaged/main/default/objects/ETST_Student__c/fields/ETST_School__c.field-meta.xml
<CustomField>
    <fullName>ETST_School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Business (B2B) - School</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Students (School)</relationshipLabel>
    <relationshipName>ETST_Students</relationshipName>
    <type>Lookup</type>
</CustomField>