unpackaged/main/default/objects/ETST_Student__c/fields/ETST_School_Address__c.field-meta.xml
<CustomField>
    <fullName>ETST_School_Address__c</fullName>
    <formula>ETST_School__r.BillingStreet &amp; BR() &amp;
ETST_School__r.BillingCity &amp; &quot;, &quot; &amp;
ETST_School__r.BillingState &amp; &quot; &quot; &amp;
ETST_School__r.BillingPostalCode &amp; BR() &amp;
ETST_School__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School Address</label>
    <type>Text</type>
</CustomField>