unpackaged/main/default/objects/ETST_Student__c/fields/ETST_School_City__c.field-meta.xml
<CustomField>
    <fullName>ETST_School_City__c</fullName>
    <formula>ETST_School__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School City</label>
    <type>Text</type>
</CustomField>