unpackaged/main/default/objects/ETST_Student__c/fields/ETST_School_Name__c.field-meta.xml
<CustomField>
    <fullName>ETST_School_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School Name</label>
    <referenceTo>ETST_School__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>