unpackaged/main/default/objects/ETST_Student__c/fields/ETST_Secondary_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>ETST_Secondary_Mobile_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Mobile Number</label>
    <type>Phone</type>
</CustomField>