unpackaged/main/default/objects/ETST_Student__c/fields/ETST_Student_Id__c.field-meta.xml
<CustomField>
    <fullName>ETST_Student_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Student Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>