unpackaged/main/default/objects/ETST_Student__c/fields/ETST_Student_School__c.field-meta.xml
<CustomField>
    <fullName>ETST_Student_School__c</fullName>
    <formula>ETST_School_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student School</label>
    <type>Text</type>
</CustomField>