unpackaged/main/default/objects/ETST_Student__c/fields/ETST_Student_SFID__c.field-meta.xml
<CustomField>
    <fullName>ETST_Student_SFID__c</fullName>
    <displayFormat>S-{0000000}</displayFormat>
    <label>Student SFID</label>
    <type>AutoNumber</type>
</CustomField>