unpackaged/main/default/objects/ETST_Student__c/fields/is_New_Student__c.field-meta.xml
<CustomField>
    <fullName>is_New_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is New Student</label>
    <type>Checkbox</type>
</CustomField>