unpackaged/main/default/objects/ETST_Student__c/fields/School_Coordinator_does_not__c.field-meta.xml
<CustomField>
    <fullName>School_Coordinator_does_not__c</fullName>
    <formula>OR(ETST_School_Name__r.Customer__r.ETST_Coordinator__r.IsActive == false, ETST_School_Name__r.Customer__r.ETST_Coordinator__c ==null)</formula>
    <label>School Coordinator does not</label>
    <type>Checkbox</type>
</CustomField>