unpackaged/main/default/objects/ETST_Student__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Request</label>
    <type>Checkbox</type>
</CustomField>