unpackaged/main/default/objects/ETST_Student__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Name</label>
    <referenceTo>ETST_School__c</referenceTo>
    <relationshipLabel>Students (Student Name)</relationshipLabel>
    <relationshipName>Students2</relationshipName>
    <type>Lookup</type>
</CustomField>