unpackaged/main/default/objects/ETST_Student__c/recordTypes/ETST_Student.recordType-meta.xml
<RecordType>
    <fullName>ETST_Student</fullName>
    <active>true</active>
    <label>Student</label>
</RecordType>