unpackaged/main/default/objects/ETST_Student__c/validationRules/ETST_DOB_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ETST_DOB_validation</fullName>
    <active>true</active>
    <errorConditionFormula>ETST_Date_of_Birth__c &gt; today()</errorConditionFormula>
    <errorDisplayField>ETST_Date_of_Birth__c</errorDisplayField>
    <errorMessage>Date of Birth should not greater than today</errorMessage>
</ValidationRule>