unpackaged/main/default/objects/ETST_Student__c/validationRules/ETST_EID_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ETST_EID_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(ETST_Emirates_Id__c)),
NOT(REGEX(ETST_Emirates_Id__c,&quot;([784-]{4}[0-9-]{5}[0-9-]{8}[0-9]{1})&quot;))
)</errorConditionFormula>
    <errorDisplayField>ETST_Emirates_Id__c</errorDisplayField>
    <errorMessage>Please enter Student Emirates Id in correct format (784-XXXX-XXXXXXX-X)</errorMessage>
</ValidationRule>