unpackaged/main/default/objects/ETST_Student__c/validationRules/ETST_Phone_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ETST_Phone_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(ETST_Phone__c)),
NOT(REGEX(ETST_Phone__c,&quot;([+971]{4}|[971]{3}|[00971]{5})[0-9]{9}&quot;))
)</errorConditionFormula>
    <errorDisplayField>ETST_Phone__c</errorDisplayField>
    <errorMessage>Phone number should start with &quot;+971&quot; or &quot;971&quot; followed by 9 digits.</errorMessage>
</ValidationRule>