unpackaged/main/default/objects/ETST_Student__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ETST_Student_SFID__c</columns>
    <columns>NAME</columns>
    <columns>ETST_First_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ETST_Email__c</columns>
    <columns>ETST_Coordinator_Name__c</columns>
    <columns>ETST_Student_School__c</columns>
    <columns>ETST_Relationship__c</columns>
    <columns>ETST_Emirate__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ETST_Student__c.ETST_Student</value>
    </filters>
    <label>All</label>
</ListView>