unpackaged/main/default/objects/ETST_Student__c/listViews/Chatbot_Students.listView-meta.xml
<ListView>
    <fullName>Chatbot_Students</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>ETST_ETransport__c</columns>
    <columns>ETST_Latitude__c</columns>
    <columns>ETST_Longitude__c</columns>
    <columns>ETST_ParentEID__c</columns>
    <columns>ETST_Phone__c</columns>
    <columns>ETST_Emirate__c</columns>
    <columns>ETST_Emirates_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ETST_Latitude__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Chatbot Students</label>
</ListView>